Add alternative run config for Windows